# ares

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  TODO.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml
docs/: adsb.md  annotations.md  assistant-prompt-tests.md  assistant.md  backend.md  bloodhound.md  bullseye.md  chat.md  database.md  frontend.md  intercept.md  perimeter.md  plugins.md  release-notes.md  roadmap-assistant-cards.md  scenes.md  snapshot.md  styles.md  tracks.md
examples/plugins/: hello-world.js
scripts/: cot-sender.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: takmessage.proto
src-tauri/src/: cot.rs  cot_sender.rs  lib.rs  listeners.rs  main.rs  migrations.rs  plugins.rs  tak_v1.rs  tileserver.rs
src-tauri/src/assistant/: commands.rs
src-tauri/src/scenes/: commands.rs  mod.rs  query_registry.rs
src/assets/: global.css
src/components/: AdsbPanel.vue  AdsbTrackPanel.vue  AisPanel.vue  AisTrackPanel.vue  AnnotationsPanel.vue  AppFooter.vue  AppSidebar.vue  AttributesPanel.vue  BloodhoundPanel.vue  BullseyePanel.vue  CallInterceptorPanel.vue  ChatPanel.vue  ConnectionsDialog.vue  CoordInput.vue  DrawPanel.vue  ExportCotDialog.vue  GhostPanel.vue  ImportExportDialog.vue  LayersPanel.vue  ListenersDialog.vue  ManualTrackPanel.vue  MapAlertChip.vue  MapContextMenu.vue  MapFeaturePicker.vue  MapFooter.vue  MapToolbar.vue  OverlaysDialog.vue  PerimeterPanel.vue  PluginPanel.vue  ReleaseNotesDialog.vue  ReleaseNotesList.vue  RoutePanel.vue  SettingsDialog.vue  TrackDropPanel.vue  TrackListPanel.vue  TrackPanel.vue  TrackTypePicker.vue
src/composables/: maplibrePitchControl.js  useAssistantTools.js  useClickDispatcher.js  useDraggable.js  useMapAdsb.js  useMapAis.js  useMapAlerts.js  useMapAnnotations.js  useMapBloodhound.js  useMapBullseye.js  useMapDraw.js  useMapGhosts.js  useMapIntercepts.js  useMapManualTracks.js  useMapMeasure.js  useMapPerimeters.js  useMapRange.js  useMapRoute.js  useMapSnapshot.js  useMapTracks.js  useMapVideo.js  useZIndex.js  (+1 more)
(+84 files in other folders)
