[package]
name = "ares"
version = "1.0.2"
description = "Ares"
authors = [""]
edition = "2021"

[lib]
name = "ares_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "io-util"] }
quick-xml = "0.37"
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum     = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
