[package]
name = "ares"
version = "1.1.8"
description = "Ares"
authors = [""]
edition = "2021"

[lib]
name = "ares_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"
# protox is a pure-Rust replacement for `protoc` so plugin-host builds
# don't depend on a system protoc install. Compiles our vendored .proto
# files at build time and feeds the FileDescriptorSet to prost-build.
protox = "0.7"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "io-util"] }
quick-xml = "0.37"
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum     = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
if-addrs = "0.13"
socket2 = { version = "0.5", features = ["all"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
prost = "0.13"
